# prolog

./: .gitignore  CHANGELOG.md  LICENSE  prolog.cabal
src/: Main.hs
src/Ast/: Datalog.hs
src/Interpret/: Interactive.hs  Interpreter.hs  Program.hs  ProgramState.hs
src/Lang/Datalog/: Ast.hs  Datalog.hs  Interpreter.hs  Parser.hs  Tokenizer.hs  Tokens.hs
src/Parse/: Parser.hs  Tokenizer.hs
src/Util/: Maybe.hs  State.hs
