name:                prolog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MLavrentyev/prolog#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Lavrentyev
maintainer:          lavrema@outlook.com
copyright:           2023 Mark Lavrentyev
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable prolog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
